--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,54 @@
-babel==2.9.0
+alembic==1.11.1
+app==0.0.1
+asgiref==3.7.2
+attrs==20.3.0
+Babel==2.9.0
+beautifulsoup4==4.9.3
+blinker==1.6.2
+certifi==2023.5.7
+cffi==1.15.1
+chardet==3.0.4
+click==8.1.4
+colorama==0.4.6
+cryptography==41.0.1
+Django==4.2.3
+Flask==2.0.3
+Flask-Migrate==4.0.4
+Flask-Moment==0.11.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.1.1
+form==0.0.1
+greenlet==2.0.2
+idna==2.10
+itsdangerous==2.1.2
+jellyfish==0.11.2
+Jinja2==3.1.2
+lib50==3.0.6
+Mako==1.2.4
+markdown2==2.4.9
+MarkupSafe==2.1.3
+packaging==23.1
+pexpect==4.8.0
+postgres==4.0
+psycopg2-binary==2.9.6
+psycopg2-pool==1.1
+ptyprocess==0.7.0
+pycparser==2.21
+pySmartDL==1.3.4
 python-dateutil==2.6.0
-flask-moment==0.11.0
-flask-wtf==0.14.3
-flask_sqlalchemy==2.4.4
+pytz==2023.3
+PyYAML==5.4.1
+requests==2.24.0
+selenium==3.141.0
+six==1.16.0
+soupsieve==2.4.1
+SQLAlchemy==1.4.0
+sqlparse==0.4.4
+submit50==3.1.1
+sudo==1.0.0
+termcolor==1.1.0
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==1.25.11
+Werkzeug==2.3.6
+WTForms==3.0.1
